kubernetes/klipper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: klipper
  labels:
    app: klipper
