kubernetes/klipper/klipper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klipper
  namespace: klipper
  labels:
    app: klipper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: klipper
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: klipper
    spec:
      containers:
        - name: klipper
          image: 'alphaldz/klipper_moonraker:latest-arm64'
          imagePullPolicy: Always
          ports:
            - containerPort: 7125
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - SYS_NICE
            privileged: true
          volumeMounts:
            - mountPath: /home/klippy/gcode_files
              name: gcode-claim
            - mountPath: /home/klippy/printer_data/config
              name: klipper-claim
            - mountPath: /home/klippy/.moonraker_database
              name: moonraker-claim
            - name: dev
              mountPath: /dev
      nodeName: rpi5
      restartPolicy: Always
      volumes:
        - name: klipper-claim
          persistentVolumeClaim:
            claimName: klipper-claim
        - name: moonraker-claim
          persistentVolumeClaim:
            claimName: moonraker-claim
        - name: gcode-claim
          persistentVolumeClaim:
            claimName: gcode-claim
        - name: dev
          hostPath:
            path: /dev
---
apiVersion: v1
kind: Service
metadata:
  name: klipper
  namespace: klipper
  labels:
    app: klipper
spec:
  type: ClusterIP
  ports:
    - name: moonraker
      port: 7125
      targetPort: 7125
  selector:
    app: klipper
