kubernetes/klipper/mainsail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainsail
  namespace: klipper
  labels:
    app: mainsail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainsail
  template:
    metadata:
      labels:
        app: mainsail
    spec:
      containers:
        - name: mainsail
          image: dimalo/mainsail
          ports:
            - containerPort: 80
              protocol: TCP
      nodeName: rpi5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mainsail
  namespace: klipper
  labels:
    app: mainsail
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: mainsail
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainsail-ingress
  namespace: klipper
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local:9091/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.freedom35.fr/?rd=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Remote-User,Remote-Groups,Remote-Name,Remote-Email"
spec:
  ingressClassName: nginx
  rules:
    - host: mainsail.freedom35.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainsail
                port:
                  number: 80
